--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -70,7 +70,7 @@
                 android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:checked="true"
-                android:text="Feiminino"
+                android:text="Feminino"
                 />
             <RadioButton
                 android:id="@+id/rbMasculino"
