--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -7,29 +7,14 @@
     android:orientation="vertical"
     tools:context="com.example.manoel.wolfchatapp.Activity.CadastroActivity">
 
-    <ScrollView
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></ScrollView>
+        android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         >
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/cadFotoPerfil"
-            android:layout_width="50sp"
-            android:layout_height="50sp"
-            android:src="@mipmap/ic_launcher"
-            android:layout_gravity="center"
-            />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Clique na imagem para adicionar uma foto!"
-            android:textAlignment="center"
-            tools:textColor="@android:color/black" />
-
         <EditText
             android:id="@+id/edtCadNome"
             android:layout_width="match_parent"
@@ -100,10 +85,13 @@
             android:id="@+id/btnSalvar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="SALVAR"
+            android:text="SALVAR CADASTRO"
+
             />
 
 
     </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
